2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/GtkDialog.xs: Add documentation about closing dialogs, and
	mention that class closures for the response signal receive
	unconverted response ids.  Patch by Kevin Ryde.

	* xs/GtkWindow.xs: Add a couple of words about the delete-event
	signal and its relation to window destruction and hidden windows.
	Patch by Kevin Ryde.

	* xs/GtkTreeModel.xs: Document that class closures in Perl
	subclasses for the rows-reordered signal receive an incorrect
	reorder array parameter, unlike normal signal handlers.  Patch by
	Kevin Ryde.

2008-07-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/GtkWidget.xs: Document some aspects of Gtk2::Widget::activate
	and set_scroll_adjustments that are relevant to Perl subclasses.
	Patch by Kevin Ryde.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkClipboard.t: Fix test failure that's presumably due to
	get_func being run more often than expected.  Also use
	Gtk2::TestHelper's run_main to replace equivalent Glib::Timeout
	constructs.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkIconView.t: Fix test failures by not running certain
	unreliable tests.  Also avoid running unnecessary main loops.

2008-06-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.183.

2008-06-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/GtkAdjustment.xs: Improve the documentation for the
	accessors.  Patch by Kevin Ryde.

	* xs/GtkWidget.xs: Document why signal_chain_from_overridden
	doesn't quite work when used in a size-request handler.  Patch by
	Kevin Ryde.

2008-05-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkRecentChooser.t
	* t/GtkRecentManager.t: Fix test failures due to the asynchronous
	nature of the manager's add_item().

2008-05-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm